--- a/Reto-2/index.html
+++ b/Reto-2/index.html
@@ -16,7 +16,7 @@
     <img class="header__img" src="./assets/logo-platzi-video-BW2.png" alt="Platzi Video">
   </header>
   <section class="not-found">
-    <h1>404</h1>
+    <h1 class="pulse">404</h1>
     <p>Página no encontrada :(</p>
   </section>
   <footer class="footer">
